# daisy-multifx-pedal

./: .gitignore  .gitmodules  CLAUDE.md  LICENSE  Makefile  README.md  cliff.toml
.claude/: settings.local.json
.github/workflows/: ci.yml  deploy-docs.yml  editor-release.yml  release.yml
docs/: HARDWARE.md  MIDI_USB.md  PRESETS.md  USER_MANUAL.md
docs/superpowers/plans/: 2026-05-17-live-state-persistence.md  2026-05-23-dsp-quality-improvements.md  2026-05-25-desktop-editor-app.md  2026-05-25-firmware-preset-expansion.md  2026-05-27-editor-ux-overhaul.md  2026-06-02-preset-ui-sync.md  2026-06-03-preset-renovation.md
docs/superpowers/specs/: 2026-05-17-live-state-persistence-design.md  2026-05-23-dsp-quality-improvements-design.md  2026-05-25-preset-expansion-desktop-editor-design.md  2026-05-27-editor-ux-overhaul-design.md  2026-06-02-preset-ui-sync-design.md  2026-06-03-preset-renovation-design.md
editor/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
editor/src/: App.tsx  index.css
editor/src-tauri/: Cargo.toml  tauri.conf.json
editor/src-tauri/capabilities/: default.json
editor/src-tauri/icons/: icon.icns
editor/src-tauri/src/: commands.rs  main.rs  midi.rs  sysex.rs
editor/src/__tests__/: presetCodec.test.ts  sysex.test.ts
editor/src/components/: ExportDialog.tsx  KnobPanel.tsx  ModeSelector.tsx  PresetBrowser.tsx  PresetHeader.tsx  StageCard.tsx
editor/src/hooks/: useMidi.ts
editor/src/lib/: presetCodec.ts  sysex.ts
juce_plugin/: CMakeLists.txt
juce_plugin/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  daisy_seed.h
juce_plugin/Source/util/: scopedirqblocker.h
src/: main.cpp
src/audio/: audio_engine.cpp  audio_engine.h  bypass.cpp  bypass.h  stereo_frame.h
src/config/: constants.h  delay_mode_id.h  mod_mode_id.h  pin_map.h  reverb_mode_id.h
src/display/: display_colors.h  display_layout.h  display_manager.cpp  display_manager.h  display_renderer.cpp  display_renderer.h  st7789_driver.cpp
src/dsp/: allpass.h  allpass_filter.h  band_shifter.h  bbd_emulator.h  comb_filter.h  dc_blocker.h  delay_line_sdram.cpp  delay_line_sdram.h  diffuser.cpp  diffuser.h  early_reflections.h  envelope_follower.cpp  envelope_follower.h  fast_math.h  fdn.cpp  fdn.h  feedback_limiter.h  formant_filter.h  hilbert_transform.h  lfo.cpp  lfo.h  multirate.h  octave_generator.h  pattern_sequencer.h  pitch_shifter.cpp  pitch_shifter.h  saturation.h  svf.h  tone_filter.cpp  tone_filter.h  waveshaper.h
src/hardware/: controls.cpp  controls.h
src/midi/: midi_handler.cpp  midi_handler.h  sysex_codec.cpp  sysex_codec.h
src/modes/: auto_swell_mode.cpp  auto_swell_mode.h  bloom_reverb.cpp  bloom_reverb.h  chorale_reverb.cpp  chorale_reverb.h  chorus_mode.cpp  chorus_mode.h  cloud_reverb.cpp  cloud_reverb.h  dbucket_delay.cpp  dbucket_delay.h  delay_mode.h  delay_mode_registry.cpp  delay_mode_registry.h  destroyer_mode.cpp  destroyer_mode.h  digital_delay.cpp  digital_delay.h  dual_delay.cpp  dual_delay.h  duck_delay.cpp  duck_delay.h  filter_delay.cpp  filter_delay.h  filter_mode.cpp  filter_mode.h  flanger_mode.cpp  flanger_mode.h  formant_mode.cpp  formant_mode.h  hall_reverb.cpp  hall_reverb.h  lofi_delay.cpp  lofi_delay.h  magneto_reverb.cpp  magneto_reverb.h  mod_mode.h  mod_mode_registry.cpp  mod_mode_registry.h  (+39 more)
src/params/: delay_param_id.h  delay_param_map.cpp  delay_param_map.h  delay_param_set.cpp  delay_param_set.h  mod_param_id.h  mod_param_map.cpp  mod_param_map.h  mod_param_set.cpp  mod_param_set.h  param_range.h  reverb_param_id.h  reverb_param_map.cpp  reverb_param_map.h  reverb_param_set.cpp  reverb_param_set.h
src/presets/: browse_machine.cpp  browse_machine.h  preset_manager.cpp  preset_manager.h  qspi_preset_store.cpp  qspi_preset_store.h
src/tempo/: tap_tempo.cpp  tap_tempo.h  tempo_sync.cpp  tempo_sync.h
tests/: Makefile  run_tests  run_tests.cpp  test_browse.cpp  test_framework.h  test_hardware.py  test_preset_store.cpp
tests/mocks/: daisy_seed.h  mock_preset_store.h
website/: astro.config.mjs  package-lock.json
website/src/content/docs/developer/: architecture.md  building.md  display.md  dsp-blocks.md  midi-dev.md  mode-system.md  parameters.md  signal-path.md
website/src/content/docs/hardware/: bom.md  pin-map.md  wiring.md
website/src/content/docs/user-manual/: effect-modes.md  front-panel.md  introduction.md  midi.md  parameters.md  presets.md  signal-chain.md  tap-and-hold.md  troubleshooting.md
website/src/pages/: index.astro
website/src/styles/: custom.css
